# svcirct

./: .gitmodules  CMakeLists.txt
cmake/: FindSlang.cmake
doc/: dev.md
src/: CMakeLists.txt  MLIRGen.cpp  MLIRGen.h  ast.cpp  ast.h
src/standalone/: CMakeLists.txt
src/standalone/include/Standalone/: StandaloneDialect.h  StandaloneDialect.td  StandaloneOps.h  StandaloneOps.td  StandaloneTypes.td
src/standalone/lib/Standalone/: CMakeLists.txt  StandaloneDialect.cpp
tests/: CMakeLists.txt  test_ast.cpp  test_mlir.cpp
tests/benchmark/: ud_counter.json  udcounter_all.llhd  udcounter_all.mlir
tests/benchmark/counter/: counter_ud.v  counter_ud_tb.v
tests/benchmark/examples/: d_ff.sv  d_ff_elab.mlir
tools/: CMakeLists.txt  svcirct.cpp
